- Fix potential security vulnerabilities

--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "TransactionsAppBackEnd",
-  "description": "Emotional Transaction Feed",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Jose Ant. Ayllon <joseayllonll@hotmail.com>",
-  "license": "ISC",
-  "dependencies": {
-    "csvtojson": "^2.0.8",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "morgan": "^1.9.1",
-    "app-root-path": "^2.2.1"
-  }
+    "name": "TransactionsAppBackEnd",
+    "description": "Emotional Transaction Feed",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Jose Ant. Ayllon <joseayllonll@hotmail.com>",
+    "license": "ISC",
+    "dependencies": {
+        "app-root-path": "^2.2.1",
+        "csvtojson": "^2.0.8",
+        "ejs": "^2.6.1",
+        "express": "^4.16.4",
+        "lodash": "^4.17.11",
+        "morgan": "^1.9.1"
+    }
 }
